--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
 			      {% endif %}
 
 			      <li class="{% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
-			        <a class="{{ current }}" href="{{ link.url }}">{{ link.text }}</a>
+			        <a class="{{ current }}" href="{{ link.baseurl }}">{{ link.text }}</a>
 			      </li>
 			    {% endfor %}
 			  </ul>
@@ -57,7 +57,7 @@
 			      {% endif %}
 
 			      <li class="{% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
-			        <a class="{{ current }}" href="{{ link.url }}">{{ link.text }}</a>
+			        <a class="{{ current }}" href="{{ link.baseurl }}">{{ link.text }}</a>
 			      </li>
 			    {% endfor %}
 			  </ul>
