--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="main_header">
 	<div class="container">
 		<div class="logo">
-			<a href="{{site.baseurl}}">
+			<a href="{{site.newbaseurl}}">
 				<img alt="Ant Logo" src="{{site.baseurl}}/assets/img/ant_logo.png">
 			</a>
 		</div>
